# ccntool

.github/workflows/: ci.yml
ccntool_core/: Cargo.toml
ccntool_core/src/: lib.rs
ccntool_gui/: Cargo.toml
ccntool_gui/src/: app.rs  custom_frame.rs  main.rs
ccntool_tui/: Cargo.toml
